--- a/09.Escalas.tex
+++ b/09.Escalas.tex
@@ -99,7 +99,7 @@
 		
 		Si aún quedan varias $f$ que cumplen todos los requisitos, se escogerá la más grave, la menor de ellas. De esta manera, dada cualquier escala E, la función E-inducida queda unívocamente determinada.
 		
-		En el Anexo \ref{app:function}, página \pageref{app:function}, se encuentra el código en Haskell de un programa que, dado una escala, produce su función inducida óptima con las propiedades descritas anteriormente. También puede encontrarse en \textit{https://gitlab.com/dodecafonismo/f-inducida}
+		En el Anexo \ref{app:function}, página \pageref{app:function}, se encuentra el código en Haskell de un programa que, dado una escala, produce su función inducida óptima con las propiedades descritas anteriormente. También puede encontrarse en \textit{https://gitlab.com/dodecafonismo/f-inducida}.
 		
 	\section{Escalas y obras utilizadas}
 	
