--- a/10.Musescore.tex
+++ b/10.Musescore.tex
@@ -1,6 +1,15 @@
 	\chapter{RESULTADOS DE LAS MODIFICACIONES}
     
     % 10.plugin de musescore, conclusiones
+    \section{Página de modificaciones y plugin}
+   
+    He creado una página interactiva que transforma cada nota de una partitura a la nota requerida. Está escrita en Elm y el código puede encontrarse en \textit{https://gitlab.com/dodecafonismo/modificaciones}.
+   
+    \begin{wrapfigure}{l}{0.2\textwidth}
+    	\vspace{-0.5cm}
+    	\qrcode{https://modificaciones.netlify.com/}
+    	\vspace{-1.5cm}
+    \end{wrapfigure} Este es el enlace de la aplicación web. Sus instrucciones de uso se encuentran al final de la página. El enlace es \textit{https://modificaciones.netlify.com/}.
     
     \section{Obra de Schoenberg}
    
