--- a/Bibliotecas.tex
+++ b/Bibliotecas.tex
@@ -2,9 +2,14 @@
 \usepackage[spanish,es-lcroman]{babel}
 \usepackage[utf8]{inputenc}
 
+% QR
+\usepackage{bytefield}
+\usepackage{qrcode}
+
 % Matemáticas
 \usepackage{amsmath}
 
+% Listas numeradas
 \usepackage{enumerate}
 
 % Letras raras de matemáticas
