--- a/02.Dodecafonismo.tex
+++ b/02.Dodecafonismo.tex
@@ -22,7 +22,7 @@
 	
 		La permutación $\sigma(m)$, con $m\in \mathbb{Z} / (12)$\footnote{$\mathbb{Z} / (12)=\{0,\ 1,\ 2,\ 3,\ 4,\ 5,\ 6,\ 7,\ 8,\ 9,\ 10,\ 11\}$}, pertenece al grupo simétrico de orden 12: $\sigma\in$ S$_{12}$. Por ejemplo, en la Suite para piano Op. 25 Schoenberg utiliza como serie original en todos los movimientos de la obra la siguiente permutación $\sigma$:
 		$$\sigma=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\4&5&7&1&6&3&8&2&11&0&9&10\\\end{matrix}\right)$$	
-		\includegraphics[width=138mm]{1.png}
+		\includegraphics[width=\textwidth]{1.png}
 		
 		\emph{3. La serie será expuesta en cualquiera de sus aspectos lineales: original, inversión, retrogradación de la original y retrogradación de la inversión.}
 		 
@@ -51,7 +51,7 @@
 		
 		Una posible serie transportada sobre la permutación $\sigma$ de la Suite para piano Op. 25, con k $= 6$, es la siguiente serie T$^6$:
 		$$\text{T}^6=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&11&1&7&0&9&2&8&5&6&3&4\\\end{matrix}\right)$$	
-		\includegraphics[width=138mm]{2.png}
+		\includegraphics[width=\textwidth]{2.png}
 		
 	\subsection{Retrogradación}
 		La \emph{retrogradación} consiste en leer la serie original desde la nota final hacia atrás, es decir, aplicar a la serie una simetría especular. De este modo, la primera nota irá al último puesto, la segunda al penúltimo, y así sucesivamente.
@@ -63,7 +63,7 @@
 			
 		La serie retrógrada sobre la permutación $\sigma$ de la Suite Op. 25 es la siguiente serie R:	
 		$$\text{R}=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&9&0&11&2&8&3&6&1&7&5&4\\\end{matrix}\right)$$		
-		\includegraphics[width=138mm]{3.png}
+		\includegraphics[width=\textwidth]{3.png}
 		
 	\subsection{Inversión}
 		La \emph{inversión} consiste en cambiar la dirección --de ascendente a descendente, y viceversa-- de los intervalos entre cada nota de la serie. Si el primer intervalo en la serie original $\sigma$ es de $+k$, el primer intervalo en la serie invertida I será de $-k$ (mod. 12), por lo que debemos cambiar el signo de $\sigma$ para construir I. Además, queremos que la primera nota de ambas series, I(0) y $\sigma$(0), coincidan, así que debemos transportar la serie ($-\sigma$) un número $\lambda$ de semitonos para que esta condición se cumpla:
@@ -80,7 +80,7 @@
 		$$
 		\text{I}=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\4&3&1&7&2&5&0&6&9&8&11&10\\\end{matrix}\right)
 		$$		
-		\includegraphics[width=138mm]{4.png}
+		\includegraphics[width=\textwidth]{4.png}
 				
 		En total, obtendremos 48 series -- aunque no obligatoriamente distintas entre sí -- pertenecientes a un solo espectro serial. Hay 12 series originales sobre cada una de las doce notas, 12 series retrógradas, 12 invertidas y 12 series sobre las que se aplica tanto la retrogradación como la inversión. A continuación se muestra la sintaxis simple junto a la matemática:
 		
@@ -110,9 +110,36 @@
 	
 	\section{Matrices dodecafónicas}
 		
-		Dada una serie, su matriz dodecafónica es una representación visual de su espectro serial; es decir, del conjunto de series derivadas de esa serie. La derivación se obtiene mediante tres funciones transformativas: la transposición (T), la inversión (I) y la retrogradación (R).
-		
-		El espectro serial es todo el material compositivo sonoro del que se dispone para la composición de una obra dodecafónica. Al poder ordenar y disponer la información en una tabla, el compositor puede acceder a toda ella al mismo tiempo sin tener que calcular cada serie individualmente.
+		Dada una serie, su matriz dodecafónica es una representación visual de su espectro serial; es decir, del conjunto de series derivadas de esa serie. El espectro serial es todo el material compositivo sonoro del que se dispone para la composición de una obra dodecafónica. Al poder ordenar y disponer la información en una tabla, el compositor puede acceder a toda ella al mismo tiempo sin tener que calcular cada serie individualmente.		
 		
 		La matriz se lee en la dirección en la que aparece el nombre de la serie. Las series T se leen de izquierda a derecha, mientras que las series R de derecha a izquierda. Las series I se leen de arriba a abajo y las IR/RI de abajo a arriba.
-	
+		
+		He creado un programa que devuelve en formato \LaTeX{} la matriz correspondiente a cualquier serie dodecafónica que se introduzca en teclado, además de producir la nomenclatura matemática para cada serie. El código, escrito en C++, está incluido en el Anexo \ref{app:matrices}, página \pageref{app:matrices}, y está creado en base a las fórmulas de construcción de series y a la propiedad de invariancia de intervalos en las transportaciones.
+		
+		A continuación, se incluye la matriz dodecafónica de la serie P de la Suite Op. 25 de Schoenberg. Mientras que la mayoría de tablas tienen dos filas inferiores, que se corresponden con las distintas nomenclaturas de RI e IR para una misma serie – ya que normalmente no conmutan –, en la matriz de la serie P sí coinciden, como se mencionará en el apartado \ref{conmut}, por lo que solamente se incluye una de las dos.		
+		$$\begin{array}{l|cccccccccccc|r}
+		&\text{I}_{0}&\text{I}_{1}&\text{I}_{3}&\text{I}_{9}&\text{I}_{2}&\text{I}_{11}&\text{I}_{4}&\text{I}_{10}&\text{I}_{7}&\text{I}_{8}&\text{I}_{5}&\text{I}_{6}&\\
+		\hline
+		\text{T}_{0}&4&5&7&1&6&3&8&2&11&0&9&10&\text{R}_{0}\\
+		\text{T}_{11}&3&4&6&0&5&2&7&1&10&11&8&9&\text{R}_{11}\\
+		\text{T}_{9}&1&2&4&10&3&0&5&11&8&9&6&7&\text{R}_{9}\\
+		\text{T}_{3}&7&8&10&4&9&6&11&5&2&3&0&1&\text{R}_{3}\\
+		\text{T}_{10}&2&3&5&11&4&1&6&0&9&10&7&8&\text{R}_{10}\\
+		\text{T}_{1}&5&6&8&2&7&4&9&3&0&1&10&11&\text{R}_{1}\\
+		\text{T}_{8}&0&1&3&9&2&11&4&10&7&8&5&6&\text{R}_{8}\\
+		\text{T}_{2}&6&7&9&3&8&5&10&4&1&2&11&0&\text{R}_{2}\\
+		\text{T}_{5}&9&10&0&6&11&8&1&7&4&5&2&3&\text{R}_{5}\\
+		\text{T}_{4}&8&9&11&5&10&7&0&6&3&4&1&2&\text{R}_{4}\\
+		\text{T}_{7}&11&0&2&8&1&10&3&9&6&7&4&5&\text{R}_{7}\\
+		\text{T}_{6}&10&11&1&7&0&9&2&8&5&6&3&4&\text{R}_{6}\\
+		\hline
+		&\text{IR}_{0}&\text{IR}_{1}&\text{IR}_{3}&\text{IR}_{9}&\text{IR}_{2}&\text{IR}_{11}&\text{IR}_{4}&\text{IR}_{10}&\text{IR}_{7}&\text{IR}_{8}&\text{IR}_{5}&\text{IR}_{6}&
+		\end{array}$$
+		
+		También he creado una página interactiva que genera matrices de cualquier serie para cualquier longitud serial, además de generar series aleatorias. Permite escoger entre dos numeraciones y dos nomenclaturas. Está escrita en Elm y el código puede encontrarse en \textit{https://gitlab.com/dodecafonismo/matrices}.
+		
+		\begin{wrapfigure}{l}{0.2\textwidth}
+			\vspace{-0.5cm}
+			\qrcode{https://matrices.netlify.com/}
+		\end{wrapfigure} Este es el enlace de la aplicación web. Sus instrucciones de uso se encuentran al final de la página. El enlace es \textit{https://matrices.netlify.com/}.
+		
