--- a/Portada.tex
+++ b/Portada.tex
@@ -1,6 +1,6 @@
 	\begin{center}
 
-            \includegraphics[height=8.4cm]{0.png}
+            \includegraphics[width=\textwidth]{0.png}
             
 			\vspace{2cm} {\Huge LA ESTRUCTURA MATEMÁTICA\\DEL SERIALISMO MUSICAL\par}
 		
