Código en archivo, arreglar cosas

--- a/00.Permutaciones.tex
+++ b/00.Permutaciones.tex
@@ -45,3 +45,6 @@
 		
 		La notación utilizada para representar una permutación $\sigma$ perteneciente a S$_n$ con la numeración desde 0 y con $\sigma(m)$ siendo el elemento asociado a $m$ mediante $\sigma$, es:
 		$$\sigma=\left(\begin{matrix}0&1&2&&n-3&n-2&n-1\\\sigma\left(0\right)&\sigma\left(1\right)&\sigma\left(2\right)&\cdots&\sigma\left(n-3\right)&\sigma\left(n-2\right)&\sigma\left(n-1\right)\\\end{matrix}\right)$$
+		
+	\section{Aritmética modular básica}
+	% TODO
