--- a/03.Suite.tex
+++ b/03.Suite.tex
@@ -45,4 +45,4 @@
 		Es más, incluso el orden de las series utilizadas en la primera y en la última sección coinciden, exceptuando dos repeticiones consecutivas y las series T$^0$ finales, que actúan como una cadencia serial:
 		$$\begin{matrix}\mathbf{c}.\mathbf{1}&\text{T}^0&\text{IT}^6&\text{T}^6&\text{I}&\text{T}^0&\text{I}&\text{T}^6&\begin{matrix}\text{IT}^6&\text{IT}^6\\\end{matrix}&&&\mathbf{c}.\mathbf{9}\\\mathbf{c}.\mathbf{22}&\text{T}^0&\text{IT}^6&\text{T}^6&\text{I}&\text{T}^0&\begin{matrix}\text{I}&\text{I}\\\end{matrix}&\text{T}^6&\text{IT}^6&\text{T}^0&\text{T}^0&\mathbf{c}.\mathbf{31}\\\end{matrix}$$
 		
-		En el Anexo \ref{app:score}, página \pageref{app:score}, se encuentra el análisis serial completo de la Musette, y en la pista 1 su reproducción con el programa Musescore.
+		En el Anexo \ref{app:score}, página \pageref{app:score}, se encuentra el análisis serial completo de la Musette.
