--- a/04.Grupo.tex
+++ b/04.Grupo.tex
@@ -261,9 +261,9 @@
 		
 		$\text{I}\circ\text{R}(\sigma(m))=\text{I}(\text{R}(\sigma(m)))=-\text{R}(\sigma(m))+2\text{R}(\sigma(0))=-\sigma(-1-m)+2\sigma(-1-0)=-\sigma(-1-m)+2\sigma(-1)$
 		
-		$\text{R}\circ\text{I}(\sigma(m))=\text{R}(\text{I}(\sigma(m)))=\text{R}(-\sigma(m)+2\sigma(0))\overset{\footnote{R y T conmutan}}{=}\text{R}(-\sigma(m))+2\sigma(0)=-\sigma(11-m)+2\sigma(0)$
+		$\text{R}\circ\text{I}(\sigma(m))=\text{R}(\text{I}(\sigma(m)))=\text{R}(-\sigma(m)+2\sigma(0))\overset{\footnote{R y T conmutan}}{=}\text{R}(-\sigma(m))+2\sigma(0)=-\sigma(-1-m)+2\sigma(0)$
 		
-		Los únicos casos en los que podrían conmutar ocurrirían cuando $2\sigma\left(0\right)\equiv2\sigma(11)$ (mod. 12): $12+2\sigma\left(0\right)=2\sigma\left(11\right)\implies\ 6+\sigma\left(0\right)=\sigma\left(11\right)\implies \sigma\left(11\right)-\sigma\left(0\right)=6$. Es decir, cuando la primera y la última nota de la serie original se distancian en 6 semitonos, como es el caso de la permutación en la Suite Op. 25:
+		Los únicos casos en los que podrían conmutar ocurrirían cuando $2\sigma\left(0\right)\equiv2\sigma(-1)$ (mod. 12): $12+2\sigma\left(0\right)=2\sigma\left(-1\right)\implies\ 6+\sigma\left(0\right)=\sigma\left(-1\right)\implies \sigma\left(-1\right)-\sigma\left(0\right)=6$. Es decir, cuando la primera y la última nota de la serie original se distancian en 6 semitonos, como es el caso de la permutación en la Suite Op. 25:
 		
 		$$
 		\text{IR}=\text{RI}=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&11&8&9&6&0&5&2&7&1&3&4\\\end{matrix}\right)
@@ -279,7 +279,7 @@
 		
 		Los únicos casos en los que podrían conmutar son cuando $2\sigma\left(0\right)\equiv2\sigma(1)$ (mod. 12): $12+2\sigma\left(0\right)=2\sigma\left(1\right)\implies\ 6+\sigma\left(0\right)=\sigma\left(1\right)\implies \sigma\left(1\right)-\sigma\left(0\right)=6$. Es decir, cuando la primera y la segunda nota de la serie original se distancian en 6 semitonos.
 		
-		Si se echan las cuentas con C$^\text{k}$ en vez de con C$^1$, pueden conmutar si $\sigma\left(\text{k}\right)-\sigma\left(0\right)=6$. Como $\sigma$ es una permutación, devuelve todos los valores de 0 a 11 y solamente una vez cada uno. Por tanto, también devuelve 6 + $\sigma(0)$, así que siempre existe un único k para el que I y C$^\text{k}$ conmutan. En el caso de la permutación de la Suite Op. 25, como $\sigma\left(0\right)=4$ hay que encontrar el $m$ para el que $\sigma\left(m\right)=4+6=10$. En este caso, $m=11$, pero depende por completo de la permutación original.\\
+		Si se echan las cuentas con C$^\text{k}$ en vez de con C$^1$, pueden conmutar si $\sigma\left(\text{k}\right)-\sigma\left(0\right)=6$. Como $\sigma$ es una permutación, devuelve todos los valores de 0 a 11 y solamente una vez cada uno. Por tanto, también devuelve 6 + $\sigma(0)$, así que \textbf{siempre existe un único k para el que I y C$^\text{k}$ conmutan}. En el caso de la permutación de la Suite Op. 25, como $\sigma\left(0\right)=4$ hay que encontrar el k para el que $\sigma\left(\text{k}\right)=4+6=10$. En este caso, $\text{k}=11$, pero depende por completo de la permutación original.\\
 		
 		\underline{I y T ahora sí conmutan:}
 		
