--- a/07.Espectros.tex
+++ b/07.Espectros.tex
@@ -17,7 +17,9 @@
 	
 		Además, como las transposiciones siempre son distintas entre sí, siempre pertenecen al mismo espectro. Se tomarán a partir de ahora todas ellas como equivalentes, de manera que solo se necesita hacer el cálculo para \{I, R\}.
 		
-		Al calcular con permutaciones se trabajará módulo $n$. La retrogradación se define como R($\sigma(m))=\sigma(-1-m)\ \forall m\in \mathbb{Z} / (n)$. La inversión será I($\sigma(m))=-\sigma(m)$, omitiendo la transposición habitual, ya que se toman las series transpuestas como equivalentes. De esta forma $-\sigma(m)+2\sigma(0)\equiv-\sigma(m)$. La retrogradación invertida es, por tanto, la composición de ambas: RI($\sigma(m))=\text{I}\circ\text{R}(\sigma(m))=\text{I}\left(\text{R}(\sigma(m))\right)=-\sigma(-1-m)$.
+		Al calcular con permutaciones se trabajará módulo $n$. La retrogradación sigue siendo R($\sigma(m))=\sigma(-1-m)$. La inversión será I($\sigma(m))=-\sigma(m)$, omitiendo la transposición habitual, ya que se toman las series transpuestas como equivalentes. De esta forma $-\sigma(m)+2\sigma(0)\equiv-\sigma(m)$. La retrogradación invertida es, por tanto, la composición de ambas: 
+		
+		RI($\sigma(m))=\text{I}\circ\text{R}(\sigma(m))=\text{I}\left(\text{R}(\sigma(m))\right)=-\sigma(-1-m)$.
 		
 		La retrogradación, la inversión y la composición de ambas cumplen que al aplicarlas dos veces se vuelve a la serie original. En teoría de grupos se diría que tienen orden 2. Entonces, \{Id, I, R, IR\} forma un grupo especial llamado \textit{grupo de Klein}, donde RI $\equiv$ IR, ya que estamos tomando las series transpuestas como equivalentes. 
 		
