--- a/Anexos/Matrices.tex
+++ b/Anexos/Matrices.tex
@@ -2,87 +2,24 @@
 	\label{app:matrices}
 		
 	\lstset{
-		tabsize=3,
 		language=C++,
 		frame=lines,
-		numbers=left,
-		identifierstyle=\color{magenta},
-%			
-%		numberstyle=\tiny,
-		numberstyle=\ttfamily\tiny\color[gray]{0.3},		
-%		basicstyle=\footnotesize,
+		%
+		numberstyle=\ttfamily\tiny\color[gray]{0.3},
 		basicstyle=\small\sffamily,
-%		keywordstyle=\color[rgb]{0,0,1},
 		keywordstyle=\bfseries\rmfamily,
-%		commentstyle=\color[rgb]{0.09, 0.45, 0.27},
-		commentstyle=\it,
-%		stringstyle=\color{red}
+		identifierstyle=\color{magenta},
+		commentstyle=\it\color{green!50!blue},
 		stringstyle=\mdseries\rmfamily,
-%		
-		xleftmargin=2pt,
-		stepnumber=1,
-		numbersep=5pt,
-		belowcaptionskip=\bigskipamount,
-		captionpos=b,
-		escapeinside={*'}{'*},
-		emphstyle={\bf},
-		showspaces=false,
+		%
+		numbers=left,
+		stepnumber=2,
+		numbersep=15pt,
+		%
 		columns=flexible,
 		showstringspaces=false,
+		tabsize=4,
 	}
-		
-		\newpage
-	\begin{lstlisting}
-	#include <iostream>
-	using namespace std;
-	
-	const int N = 12;
-	
-	int main() {
-	
-		int s[N + 2][N + 2];
-		
-		for (int i = 1; i < N + 1; ++i) {
-			cin >> s[1][i];
-			s[i][0] = (N - s[1][i] + s[1][1]) % N;
-			s[i][N + 1] = s[i][0];
-			s[0][i] = (N - s[i][0]) % N;
-			s[N + 1][i] = s[0][i];
-		}
-		
-		for (int i = 2; i < N + 1; ++i)
-			for (int j = 1; j < N + 1; ++j)
-				s[i][j] = (s[1][j] + s[i][0]) % N;
-		
-		cout << "\n$$\\begin{array}{l|";
-		for (int i = 0; i < N; ++i)	cout << 'c';
-		cout << "|r}\n&";
-		
-		for (int i = 1; i < N + 1; ++i)
-			cout << "\\text{I}_{" << s[0][i] << "}&";
-		cout << "\\\\\n\\hline\n";
-		
-		for (int i = 1; i < N + 1; ++i) {
-			cout << "\\text{T}_{" << s[i][0] << "}&";
-		
-			for (int j = 1; j < N + 1; ++j)
-				cout << s[i][j] << "&";
-			
-			cout << "\\text{R}_{" << s[i][N + 1] << "}\\\\\n";
-		}
-		cout << "\\hline\n&";
-		
-		for (int i = 1; i < N + 1; ++i)
-			cout << "\\text{IR}_{" << s[N + 1][i] << "}&";
-		cout << "\\\\\n\\hline\n&";
-		
-		const int DIF = 2 * (s[1][N] - s[1][1]);
-		for (int i = 1; i < N + 1; ++i)
-			cout << "\\text{RI}_{" << (N + s[0][i] + DIF) % N << "}&";
-		
-		cout << "\n\\end{array}$$\n";
-		
-		return 0;
-	}
-	
-	\end{lstlisting}
+
+	\newpage
+	\lstinputlisting{Anexos/matriceslatex.cpp}
