--- a/Anexos/Series.tex
+++ b/Anexos/Series.tex
@@ -2,26 +2,26 @@
 	\label{app:series}
 	
 	\newpage
-	$$\text{T}_0=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\4&5&7&1&6&3&8&2&11&0&9&10\\\end{matrix}\right)$$
-	\includegraphics[width=138mm]{1.png}
+	$$\text{T}^0=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\4&5&7&1&6&3&8&2&11&0&9&10\\\end{matrix}\right)$$
+	\includegraphics[width=\textwidth]{1.png}
 	\vspace{1cm}
-	$$\text{T}_6=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&11&1&7&0&9&2&8&5&6&3&4\\\end{matrix}\right)$$
-	\includegraphics[width=138mm]{2.png}
+	$$\text{T}^6=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&11&1&7&0&9&2&8&5&6&3&4\\\end{matrix}\right)$$
+	\includegraphics[width=\textwidth]{2.png}
 	\vspace{1cm}
-	$$\text{I}_0=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\4&3&1&7&2&5&0&6&9&8&11&10\\\end{matrix}\right)$$
-	\includegraphics[width=138mm]{4.png}
+	$$\text{IT}^0=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\4&3&1&7&2&5&0&6&9&8&11&10\\\end{matrix}\right)$$
+	\includegraphics[width=\textwidth]{4.png}
 	\vspace{1cm}
-	$$\text{I}_6=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&9&7&1&8&11&6&0&3&2&5&4\\\end{matrix}\right)$$
-	\includegraphics[width=138mm]{6.png}
+	$$\text{IT}^6=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&9&7&1&8&11&6&0&3&2&5&4\\\end{matrix}\right)$$
+	\includegraphics[width=\textwidth]{6.png}
 	\newpage
-	$$\text{R}_0=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&9&0&11&2&8&3&6&1&7&5&4\\\end{matrix}\right)$$
-	\includegraphics[width=138mm]{3.png}
+	$$\text{RT}^0=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&9&0&11&2&8&3&6&1&7&5&4\\\end{matrix}\right)$$
+	\includegraphics[width=\textwidth]{3.png}
 	\vspace{1cm}
-	$$\text{R}_6=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\4&3&6&5&8&2&9&0&7&1&11&10\\\end{matrix}\right)$$
-	\includegraphics[width=138mm]{7.png}
+	$$\text{RT}^6=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\4&3&6&5&8&2&9&0&7&1&11&10\\\end{matrix}\right)$$
+	\includegraphics[width=\textwidth]{7.png}
 	\vspace{1cm}
-	$$\text{IR}_0=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&11&8&9&6&0&5&2&7&1&3&4\\\end{matrix}\right)$$
-	\includegraphics[width=138mm]{5.png}
+	$$\text{IRT}^0=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\10&11&8&9&6&0&5&2&7&1&3&4\\\end{matrix}\right)$$
+	\includegraphics[width=\textwidth]{5.png}
 	\vspace{1cm}
-	$$\text{IR}_6=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\4&5&2&3&0&6&11&8&1&7&9&10\\\end{matrix}\right)$$
-	\includegraphics[width=138mm]{8.png}
+	$$\text{IRT}^6=\left(\begin{matrix}0&1&2&3&4&5&6&7&8&9&10&11\\4&5&2&3&0&6&11&8&1&7&9&10\\\end{matrix}\right)$$
+	\includegraphics[width=\textwidth]{8.png}
